[gd_scene load_steps=3 format=3 uid="uid://bx7c7n7dle4ci"]

[ext_resource type="PackedScene" uid="uid://c7mxyp7jjiigm" path="res://elements/enemy/enemy.tscn" id="1_7m2ln"]
[ext_resource type="Script" path="res://elements/Enemy_Group/enemy_group.gd" id="1_pcfuk"]

[node name="enemy_group" type="Node2D" groups=["enemy_group"]]
script = ExtResource("1_pcfuk")

[node name="Enemy" parent="." instance=ExtResource("1_7m2ln")]
position = Vector2(51, 50)

[node name="Enemy2" parent="." instance=ExtResource("1_7m2ln")]
position = Vector2(91, 50)

[node name="Enemy3" parent="." instance=ExtResource("1_7m2ln")]
position = Vector2(131, 50)

[node name="Enemy4" parent="." instance=ExtResource("1_7m2ln")]
position = Vector2(171, 50)

[node name="Enemy5" parent="." instance=ExtResource("1_7m2ln")]
position = Vector2(211, 50)

[node name="Enemy6" parent="." instance=ExtResource("1_7m2ln")]
position = Vector2(31, 90)

[node name="Enemy7" parent="." instance=ExtResource("1_7m2ln")]
position = Vector2(89, 90)

[node name="Enemy8" parent="." instance=ExtResource("1_7m2ln")]
position = Vector2(157, 90)

[node name="Enemy9" parent="." instance=ExtResource("1_7m2ln")]
position = Vector2(207, 90)

[node name="DirectionTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="shootTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="shootTimer" to="." method="_on_shoot_timer_timeout"]
